namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: skilltest
  labels:
    name: skilltest
