ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: skill-test-ingress
  namespace: skilltest
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - host: minikube.local
    http:
      paths:
        - path: /user/(.*)
          pathType: Prefix
          backend:
            service:
              name: user-service
              port:
                number: 3000
        
        - path: /product/(.*)
          pathType: Prefix
          backend:
            service:
              name: product-service
              port:
                number: 3001

        - path: /order/(.*)
          pathType: Prefix
          backend:
            service:
              name: order-service
              port:
                number: 3002
